<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_70"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/imgLauncher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:src="@mipmap/ic_icon_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:fontFamily="@font/open_bold"
            android:text="@string/quen_mat_khau"
            android:textColor="@color/main_color"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/imgLauncher"
            app:layout_constraintStart_toStartOf="@id/imgLauncher"
            app:layout_constraintTop_toBottomOf="@id/imgLauncher" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginEnd="@dimen/dp_24"
            android:background="@drawable/bg_circle_textview"
            android:fontFamily="@font/robotoregular"
            android:hint="@string/email"
            android:paddingStart="@dimen/dp_8"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/btnForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_27"
            android:background="@drawable/bg_button_login"
            android:fontFamily="@font/robotoregular"
            android:paddingStart="@dimen/dp_43"
            android:paddingTop="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_43"
            android:paddingBottom="@dimen/dp_4"
            android:text="@string/forgot_pass_word"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/edtEmail"
            app:layout_constraintStart_toStartOf="@id/edtEmail"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/robotoregular"
            android:text="@string/dang_nhap"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/btnForgot"
            app:layout_constraintStart_toStartOf="@id/btnForgot"
            app:layout_constraintTop_toBottomOf="@id/btnForgot" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>